header docs cleanup -- leabra fully tested and ready to go!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -200,6 +200,7 @@ add_subdirectory(prog_lib)
 add_subdirectory(3dobj_lib)
 add_subdirectory(css_lib)
 add_subdirectory(test)
+add_subdirectory(bench/actual)
 add_subdirectory(demo/bp)
 add_subdirectory(demo/cs)
 add_subdirectory(demo/leabra)
