* Undo/Redo now beta functional -- seems to work in most cases tested. debug mode provides stats to track what is happening, for debugging as we move forward on this.
* added Dump_Load_Path_ptr and _parent to taBase -- called by TypeDef::Dump_Load_Path_impl --
these are the guys that actually make new items, and they have now been fixed (in taList_impl
subclass in particular) to *preserve the original dump file objects exactly* -- including
ensuring that the total number of objs in the list is as saved, and they load into their
designated position, etc... this was necessary for Undo/Redo, which are based on reloading
proj files saved to Strings..

* added some more DYN1 flag setting stuff for programs (OFF, CTRL_PANEL, etc)

* fixed qconsole updating

* added FindSndFile.cmake -- find libsndfile using proper paths etc, plus configure
script to audioproc plugin, plus have it using new FindSndFile.cmake guy..

--- a/plugins/audioproc/CMakeLists.txt
+++ b/plugins/audioproc/CMakeLists.txt
@@ -139,7 +139,8 @@ if (WIN32)
   ENDIF (EXISTS "${EMERGENTDIR}/3rdparty/lib/libsndfile-1.lib")
   set(EMERGENT_PLUGIN_EXTRA_LIBRARIES ${SNDFILE_LIBRARY})
 else (WIN32)
-  find_library(SNDFILE_LIBRARY sndfile)
+#   find_library(SNDFILE_LIBRARY sndfile)
+  find_package(SndFile REQUIRED)
   set(EMERGENT_PLUGIN_EXTRA_LIBRARIES sndfile)
 endif (WIN32)
 message(STATUS SNDFILE_LIBRARY: ${SNDFILE_LIBRARY})
