mods to CMakeLists to use results from FindSndFile.cmake -- now works on mac finally

--- a/plugins/audioproc/CMakeLists.txt
+++ b/plugins/audioproc/CMakeLists.txt
@@ -142,7 +142,8 @@ if (WIN32)
 else (WIN32)
 #   find_library(SNDFILE_LIBRARY sndfile)
   find_package(SndFile REQUIRED)
-  set(EMERGENT_PLUGIN_EXTRA_LIBRARIES sndfile)
+  set(EMERGENT_PLUGIN_EXTRA_LIBRARIES ${SNDFILE_LIBRARY})
+  include_directories(${SNDFILE_INCLUDE_DIR} )
 endif (WIN32)
 message(STATUS SNDFILE_LIBRARY: ${SNDFILE_LIBRARY})
 
