--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -164,7 +164,7 @@ message( STATUS "********************* Summary of Prerequisities  **************
 message( STATUS "-------------------------------------------------------------------------------" )
 message( STATUS "QT_LIBRARIES = ${QT_LIBRARIES}" )
 message( STATUS "COIN_LIBRARY = ${COIN_LIBRARY}" )
-message( STATUS "SOQT_LIBRARY = ${SOQT_LIBRARY}" )
+message( STATUS "QUARTER_LIBRARY = ${QUARTER_LIBRARY}" )
 message( STATUS "GSL_LIBRARIES = ${GSL_LIBRARIES}" )
 message( STATUS "ODE_LIBRARY = ${ODE_LIBRARY}" )
 if (NOT WIN32)
