mac packaging stuff, all working finally

--- a/demo/virt_env/CMakeLists.txt
+++ b/demo/virt_env/CMakeLists.txt
@@ -3,7 +3,8 @@
 FILE(GLOB PROJ_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.proj")
 FILE(GLOB IV_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.iv")
 FILE(GLOB PNG_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.png")
+FILE(GLOB GZ_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.gz")
 
-install(FILES ${PROJ_FILES} ${IV_FILES} ${PNG_FILES}
+install(FILES ${PROJ_FILES} ${IV_FILES} ${PNG_FILES} ${GZ_FILES}
     DESTINATION ${EMERGENT_SHARE_DEST}/demo/virt_env
 )
