--- a/install_mac_app/emergent.app/Contents/Info.plist
+++ b/install_mac_app/emergent.app/Contents/Info.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
@@ -9,18 +9,55 @@
 	<key>CFBundleIconFile</key>
 	<string>emergent.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>edu.colorado.grey.oreilly.emergent.emergent</string>
+	<string>edu.colorado.emergent</string>
 	<key>CFBundleInfoDictionaryVersion</key>
-	<string>4.0</string>
+	<string>5.0</string>
 	<key>CFBundleName</key>
 	<string>emergent</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>4.0</string>
+	<string>5.0</string>
 	<key>CFBundleSignature</key>
 	<string>rorp</string>
 	<key>CFBundleVersion</key>
-	<string>4.0</string>
+	<string>5.0</string>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>proj</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>emergent.icns</string>
+			<key>CFBundleTypeName</key>
+			<string>Emergent Project</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+		</dict>
+	</array>
+	<key>UTExportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeIdentifier</key>
+			<string>emergent.proj</string>
+			<key>UTTypeReferenceURL</key>
+			<string>http://grey.colorado.edu/emergent</string>
+			<key>UTTypeDescription</key>
+			<string>Emergent Project</string>
+			<key>UTTypeIconFile</key>
+			<string>emergent.icns</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>edu.colorado.emergent</key>
+				<string>proj</string>
+				<key>public.filename-extension</key>
+				<array>
+					<string>proj</string>
+				</array>
+			</dict>
+		</dict>
+	</array>
 </dict>
 </plist>
