--- a/plugins/template/CMakeLists.txt
+++ b/plugins/template/CMakeLists.txt
@@ -48,7 +48,7 @@ else (WIN32)
   if (EMERGENT_PREFIX_DIR)
     set(EMERGENT_SHARE_DIR "${EMERGENT_PREFIX_DIR}/share/Emergent")
   else (EMERGENT_PREFIX_DIR)
-    find_path(EMERGENT_SHARE_DIR README PATHS
+    find_path(EMERGENT_SHARE_DIR AUTHORS PATHS
       /usr/local/share/Emergent
       /usr/share/Emergent
       /opt/local/share/Emergent
