Added icon resource to windows builds

--- a/src/emergent/bin/CMakeLists.txt
+++ b/src/emergent/bin/CMakeLists.txt
@@ -2,6 +2,11 @@
 
 set(emergentbin_SRCS main.cpp)
 
+# Add icon resource for window builds
+if (WIN32)
+  set(emergentbin_SRCS ${emergentbin_SRCS} icon.rc)
+endif (WIN32)
+
 add_executable(emergent ${emergentbin_SRCS})
 
 EMERGENT_LINK_EXECUTABLES(emergent emergentlib temt)
