* Major refactoring. New paradigm allows all available system memory to be used: 1) Stream data to file in LIBSVM format 2) Save the DataTable to file 3) Reset the DataTable 3) Read the LIBSVM format data from file into a problem 4) Train/Predict/CrossValidate etc. 5) Destroy LIBSVM data 6) Read back in the DataTable.
If above process has already been done in the past including ".libsvm"
in the fname will skip to loading the LIBSVM format data.

* Implemented precision, recall, fmeasure statistics based on probability mass

--- a/plugins/LIBLINEAR/liblinear-1.8/Makefile
+++ b/plugins/LIBLINEAR/liblinear-1.8/Makefile
@@ -1,6 +1,7 @@
 CXX ?= g++
 CC ?= gcc
-CFLAGS = -Wall -Wconversion -O3 -fPIC
+CFLAGS = -g -Wall -Wconversion -fPIC
+#CFLAGS = -g -Wall -Wconversion -O3 -fPIC
 LIBS = blas/blas.a
 SHVER = 1
 #LIBS = -lblas
