Install Qt imageformats plugins, specifically so the jpeg library is available -- needed for seedling project to work on win64.

--- a/src/emergent/bin/CMakeLists.txt
+++ b/src/emergent/bin/CMakeLists.txt
@@ -22,6 +22,12 @@ install(TARGETS emergent
   RUNTIME DESTINATION bin
 )
 
+install(
+  DIRECTORY ${QT_PLUGINS_DIR}/imageformats
+  DESTINATION bin
+  USE_SOURCE_PERMISSIONS
+)
+
 # Add a desktop icon for Linux
 if (UNIX AND NOT APPLE)
   set (DESKTOP_ENTRY emergent.desktop)
