Only Windows installation needs the Qt plugins/imageformats directory installed.  Linux/Mac have access to the full Qt installation so this isn't necessary on those platforms.

--- a/src/emergent/bin/CMakeLists.txt
+++ b/src/emergent/bin/CMakeLists.txt
@@ -22,11 +22,14 @@ install(TARGETS emergent
   RUNTIME DESTINATION bin
 )
 
-install(
-  DIRECTORY ${QT_PLUGINS_DIR}/imageformats
-  DESTINATION bin
-  USE_SOURCE_PERMISSIONS
-)
+# Windows builds rely on the libjpeg plugin from Qt being present.
+if (WIN32)
+  install(
+    DIRECTORY ${QT_PLUGINS_DIR}/imageformats
+    DESTINATION bin
+    USE_SOURCE_PERMISSIONS
+  )
+endif (WIN32)
 
 # Add a desktop icon for Linux
 if (UNIX AND NOT APPLE)
