install desktop entry in linux only if prefix is /usr/local.  plus hopefully one last compile warning fix.

--- a/src/emergent/bin/CMakeLists.txt
+++ b/src/emergent/bin/CMakeLists.txt
@@ -42,6 +42,8 @@ if (UNIX AND NOT APPLE)
   )
   add_custom_target(desktop_entry_file ALL DEPENDS ${DESKTOP_ENTRY})
   add_dependencies(emergent desktop_entry_file)
-  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${DESKTOP_ENTRY} DESTINATION /usr/share/applications/)
+  if("${CMAKE_INSTALL_PREFIX}" STREQUAL "/usr/local")
+    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${DESKTOP_ENTRY} DESTINATION /usr/share/applications/)
+  endif("${CMAKE_INSTALL_PREFIX}" STREQUAL "/usr/local")
 endif (UNIX AND NOT APPLE)
 
