* wizards all updated with new doc format, and network wizard fully functional * project templates are now standard way to make a new project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -203,6 +203,7 @@ add_custom_target(clean_system_plugins
 
 # share misc files
 add_subdirectory(prog_lib)
+add_subdirectory(proj_templates)
 add_subdirectory(3dobj_lib)
 add_subdirectory(css_lib)
 add_subdirectory(test)
