--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -221,7 +221,8 @@ add_subdirectory(demo/leabra)
 add_subdirectory(demo/so)
 add_subdirectory(demo/virt_env)
 add_subdirectory(demo/data_proc)
-
+add_subdirectory(data/atlases)
+add_subdirectory(data/standard)
 
 if (false) #source to make stub includes -- must be run after making the TA files
   file(GLOB_RECURSE xxx_HEADS "${PROJECT_SOURCE_DIR}/src/*.h") 
