* added stop and continue buttons to main toolbar -- stop any running program and continue from where it last left off * fixed breakpoints in subprogs -- just one line to add them back in after init called by super-prog * incremented version to 5.3.7 -- planning to do a few PBWM things over the weekend in prep for HRL visit next week..

--- a/src/temt/ta/CMakeLists.txt
+++ b/src/temt/ta/CMakeLists.txt
@@ -7,6 +7,14 @@ set(mypath ${PROJECT_SOURCE_DIR}/src/temt/ta)
 
 CREATE_MAKETA_COMMAND(ta ${mypath} "${ta_HEADS_MAKETA}")
 
+########### running rcc qt resource compiler on ta.qrc ###############
+
+ADD_CUSTOM_TARGET(make_ta_qrc
+#  OUTPUT ta_qrc.cpp
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  COMMAND rcc -o ta_qrc.cpp ta.qrc
+  DEPENDS ta.qrc
+  )
 
 ########### install files ###############
 
