--- a/install_mac_app/emergent.app/Contents/Info.plist
+++ b/install_mac_app/emergent.app/Contents/Info.plist
@@ -22,6 +22,10 @@
 	<string>rorp</string>
 	<key>CFBundleVersion</key>
 	<string>5.0</string>
+	<key>NSPrincipalClass</key>
+	<string>NSApplication</string>
+	<key>NSHighResolutionCapable</key>
+	<true/>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
