--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ endif (WIN32)
 # version setting
 set(EMERGENT_VERSION_MAJOR "6")
 set(EMERGENT_VERSION_MINOR "0")
-set(EMERGENT_VERSION_PATCH "0")
+set(EMERGENT_VERSION_PATCH "1")
 set(EMERGENT_VERSION "${EMERGENT_VERSION_MAJOR}.${EMERGENT_VERSION_MINOR}.${EMERGENT_VERSION_PATCH}")
 
 # this is used for versioning the libs themselves
@@ -222,7 +222,7 @@ add_subdirectory(demo/so)
 add_subdirectory(demo/virt_env)
 add_subdirectory(demo/data_proc)
 add_subdirectory(data/atlases)
-#add_subdirectory(data/standard)
+add_subdirectory(data/standard)
 
 if (false) #source to make stub includes -- must be run after making the TA files
   file(GLOB_RECURSE xxx_HEADS "${PROJECT_SOURCE_DIR}/src/*.h") 
