Bug 1424: Reverted r5645 which didn't work, fixed a different way using IMPLICIT_DEPENDS_INCLUDE_TRANSFORM.  More detail in bugzilla.

--- a/src/emergent/bin/CMakeLists.txt
+++ b/src/emergent/bin/CMakeLists.txt
@@ -7,7 +7,7 @@ if (WIN32)
   set(emergentbin_SRCS ${emergentbin_SRCS} icon.rc)
 endif (WIN32)
 
-add_executable(emergent ${emergentbin_SRCS})
+EMERGENT_ADD_EXECUTABLE(emergent ${emergentbin_SRCS})
 
 EMERGENT_LINK_EXECUTABLES(emergent emergentlib temt)
 
