link libs and install DLLs -- was able to call some svn code from ta_seledit (which failed b/c it's bogus test code, but good proof of concept)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -282,6 +282,7 @@ if (WIN32)
     "${EMER_3RDPARTY_DIR}/bin/*.dll"
     "${COINDIR}/bin/*.dll"
     "${QT_BINARY_DIR}/*.dll"
+    "${SUBVERSION_INSTALL_PATH}/bin/*.dll"
   )
   install(FILES ${OUR_3RDPARTY_FILES}
     DESTINATION bin
